# drl_project

./: .gitignore  README.md  algorithms_keras_tensorflow.py  data_visualisation.ipynb  main.py  run_game_gui.py  tictactoe.py
algorithmes/: DeepQLearning.py  DeepQLearningV2.py  DoubleDeepQLearning.py  DoubleDeepQLearning_prioritized_expreplay.py  DoubleDeepQLearning_without_exp_replay.py  MCRR.py  MCTS.py  PolicyIteration.py  QLearningOffPolicy.py  reinforce.py  reinforce_with_critic.py  reinforce_with_mean_baseline.py
algorithmes/GridWorld/: DeepQLearning_gridworld.py  DoubleDeepQLearning_prioritized_expreplay_no_K_gridworld.py
algorithmes/deprecated/: DeepQLearningV2.py  DoubleDeepQLearning_prioritized_expreplay.py
algorithmes/tictactoe/: DeepQLearning_tictactoe.py  DoubleDeepQLearning_prioritized_expreplay_no_K_tictactoe.py
environnements/: Farkle.py  Farkle_GUI_v4.py  Farkle_Gui.py  Farkle_new.py  Farkle_v2.py  Farkle_v3.py  Farkle_v4.py  GridWorld.py  LineWorld.py  TicTacToe.py  TicTacToe_dqn.py  contracts.py
environnements/deprecated/: Farkle.py  Farkle_Gui.py
logs/Farkle_DDQN_1000_1733151441.081697/: events.out.tfevents.1733151441.Gusto.234483.0.v2
logs/Farkle_DDQN_2_1733170889.239229/: events.out.tfevents.1733170890.Gusto.242424.0.v2
model/test_model/: fingerprint.pb  keras_metadata.pb  (+1 more)
ressources/[Exemple] Episodic Semi gradient SARSA on TicTacToeVersus Random in Rust _ Burn/: Cargo.toml
ressources/[Exemple] Episodic Semi gradient SARSA on TicTacToeVersus Random in Rust _ Burn/src/: algorithms.rs  contracts.rs  environments.rs  main.rs
(+142 files in other folders)
